Fix #105042: Regression: Sculpt density overlay not working

Fix regression after d165d6aa2a